# rosu-pp-ffi

./: .gitattributes  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  cheadergen.toml
.github/workflows/: ci.yml
include/: rosu_pp.h
scripts/: generate-headers.sh
src/: attributes.rs  beatmap.rs  difficulty.rs  error.rs  gradual.rs  handle.rs  lib.rs  mode.rs  mods.rs  performance.rs  score_state.rs  strains.rs
src/attributes/: difficulty.rs  mod.rs  performance.rs
src/attributes/beatmap/: adjusted.rs  builder.rs  hit_windows.rs  mod.rs
src/difficulty/: inspect.rs  mod.rs
src/gradual/: difficulty.rs  mod.rs  performance.rs
tests/: beatmap.rs  beatmap_attrs.rs  common.rs  difficulty.rs  gradual.rs  inspect.rs  mode.rs  mods.rs  null_safety.rs  performance.rs
tests/c/: smoke.c
