[package]
name = "rosu-pp-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
rosu-pp = { version = "4.0.1" }
rosu-map = { version = "0.2.1" }
rosu-mods = { version = "0.4.0", features = ["serde"] }
serde = { version = "1" }
serde_json = { version = "1" }
