[package]
name = "rosu-pp-ffi"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
cheadergen = { version = "0.3" }
rosu-map = { version = "0.2.1" }
rosu-mods = { version = "0.4.0", features = ["serde"] }
rosu-pp = { version = "4.0.1" }
serde = { version = "1" }
serde_json = { version = "1" }
